test/io/ferguson/channel-changing-type-error1.good
channel-changing-type-error1.chpl:3: In function 'main':
channel-changing-type-error1.chpl:6: error: cannot init reading channel from writing channel
note: An additional error is hidden. Use --print-additional-errors to see it.
