test/io/ferguson/channel-changing-type-error1.chpl
use IO;

proc main() {
  var f = opentmp();
  var a = f.writer();
  var b:channel(writing=false) = a;
}
